<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">ReUse</string>
    <string name="sub_title_app_name">Seu Guarda-roupa Virtual para facilitar sua organização, vendas e doações</string>
    <string name="btn_ja_possuo_conta">Já possuo uma conta</string>
    <string name="title_escolha_sua_foto_de_perfil">Escolha sua foto de perfil</string>
    <string name="btn_continuar_sem_uma_foto">Continuar sem uma foto</string>
    <string name="btn_criar_conta">Criar conta</string>
    <string name="aviso_foto">"Selecione uma foto ou continue sem foto."</string>
    <string name="error_usuario_nao_autenticado">Erro: Usuário não autenticado. Redirecionando para login.</string>
    <string name="error_dados_de_conta_nao_encontrados">Erro: Dados de conta não encontrados.</string>
    <string name="error_tipo_de_usuario_pj_desconhecido">Erro: Tipo de usuário PJ desconhecido.</string>
    <string name="error__tipo_de_conta_desconhecido">Erro: Tipo de conta desconhecido.</string>
    <string name="error_gerar_id_para_o_endereco">Erro ao gerar ID para o endereço.</string>
    <string name="falha_ao_salvar_endereco">Falha ao salvar endereço: %1$s</string>
    <string name="cadastro_concluido">✅ Cadastro concluído!</string>
    <string name="falha_ao_salvar_dados_finais_da_conta">❌ Falha ao salvar dados finais da conta.</string>
    <string name="error_falha_criar_gaveta">Aviso: Falha ao criar gaveta \'%1$s\'.</string>
    <string name="title_cadastro_endereco">Cadastro Endereço</string>
    <string name="label_cep">CEP</string>
    <string name="label_hint_cep">xxxxx-xxx</string>
    <string name="label_rua">Rua</string>
    <string name="label_hint_rua">Informe o nome da rua</string>
    <string name="label_numero">Número</string>
    <string name="label_hint_numero">Informe o número da propriedade</string>
    <string name="label_complemento">Complemento (opcional)</string>
    <string name="label_hint_complemento">Ex: Casa, Apartamento, etc.</string>
    <string name="label_bairro">Bairro</string>
    <string name="label_hint_bairro">Informe o nome do bairro</string>
    <string name="label_cidade">Cidade</string>
    <string name="label_hint_cidade">Informe o nome da cidade</string>
    <string name="label_estado">Estado</string>
    <string name="label_hint_estado">Informe o nome do Estado</string>
    <string name="label_pais">País</string>
    <string name="label_hint_pais">Informe o nome do país</string>
    <string name="btn_proximo">Próximo</string>
    <string name="error_cep_nao_encontrado">CEP não encontrado ou inválido.</string>
    <string name="error_api_cep_buscar_dados">Erro de rede ao buscar CEP. Preencha manualmente.</string>
    <string name="aviso_preencha_o_campo">Preencha o campo %1$s!</string>
    <string name="error_formato_invalido_cep">CEP inválido. Formato esperado: xxxxx-xxx</string>
    <string name="error_formato_invalido_numero">Número inválido. Deve conter no máximo 5 dígitos numéricos.</string>
    <string name="title_cadastro_instituicao">Cadastro Instituição</string>
    <string name="label_nome">Nome</string>
    <string name="label_hint_nome">Digite o nome da instituição</string>
    <string name="label_usuario">Usuário</string>
    <string name="label_hint_usuario">Digite um nome de usuário</string>
    <string name="label_email">E-mail</string>
    <string name="label_hint_email">Digite um endereço de e-mail</string>
    <string name="label_senha">Senha</string>
    <string name="label_hint_senha">Digite uma senha</string>
    <string name="label_confirmar_senha">Confirmar Senha</string>
    <string name="label_hint_confirmar_senha">Digite novamente a senha</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_hint_telefone">(xx) xxxxx-xxxx</string>
    <string name="label_cnpj">CNPJ</string>
    <string name="label_hint_cnpj">xx. xxx. xxx/0001-xx</string>
    <string name="label_tipo">Tipo:</string>
    <string name="option_brecho">Brechó</string>
    <string name="option_instituicao">Instituição</string>
    <string name="aviso_nome_usuario">O nome de usuário não pode conter espaços em branco!</string>
    <string name="aviso_formato_email">E-mail inválido. Verifique o formato.</string>
    <string name="aviso_tamanho_senha">A senha deve ter pelo menos 6 caracteres!</string>
    <string name="aviso_senhas_diferentes">As senhas não coincidem!</string>
    <string name="aviso_formato_telefone">Telefone inválido. Formato esperado: (xx) xxxxx-xxxx</string>
    <string name="aviso_formato_cnpj">CNPJ inválido. Formato esperado: xx.xxx.xxx/xxxx-xx</string>
    <string name="aviso_cnpj_ja_cadastrado">Este CNPJ já está cadastrado!</string>
    <string name="aviso_nome_usuario_ja_cadastrado">Este Nome de Usuário já está em uso por outra conta!</string>
    <string name="erro_ao_verificar_nome_de_usuario">Erro ao verificar Nome de Usuário: %1$s</string>
    <string name="erro_ao_verificar_cnpj">Erro ao verificar CNPJ: %1$s</string>
    <string name="sucesso_autenticacao">Autenticação criada! Continue para o endereço.</string>
    <string name="aviso_email_ja_cadastrado">Este E-mail já está cadastrado!</string>
    <string name="error_desconhecido_no_cadastro">Erro desconhecido no cadastro.</string>
    <string name="title_cadastro_brecho">Cadastro Brechó</string>
    <string name="label_hint_nome_brecho">Digite o nome do brechó</string>
    <string name="title_cadastro_usuario">Cadastro Usuário</string>
    <string name="label_hint_nome_usuario">Digite seu nome completo</string>
    <string name="label_data_de_nascimento">Data de Nascimento</string>
    <string name="label_hint_data_de_nascimento">dd/mm/aaaa</string>
    <string name="label_cpf">CPF</string>
    <string name="label_hint_cpf">xxx.xxx.xxx-xx</string>
    <string name="aviso_formato_data_de_nascimento">Data de Nascimento inválida. Formato esperado: dd/mm/aaaa</string>
    <string name="aviso_formato_cpf">CPF inválido. Formato esperado: xxx.xxx.xxx-xx</string>
    <string name="aviso_cpf_ja_cadastrado">Este CPF já está cadastrado!</string>
    <string name="error_verificar_cpf">Erro ao verificar CPF: %1$s</string>
    <string name="title_recuperar_senha">Recuperação de Senha</string>
    <string name="sub_title_digite_email">Digite o e-mail da conta que deseja\n alterar a senha</string>
    <string name="hint_email_recuperar_senha">E-mail da conta</string>
    <string name="btn_enviar_email">Enviar</string>
    <string name="email_empty">Preencha um email!</string>
    <string name="enviamos_msg_redefinir_senha">Enviamos uma mensagem no seu email para redefinir a senha!</string>
    <string name="title_escolha_perfil">Em que perfil você se encaixa?</string>
    <string name="btn_perfilusuario">Usuário</string>
    <string name="btn_perfilbrecho">Brechó</string>
    <string name="btn_perfilinstituicao">Instituição</string>
    <string name="title_login">Bem-vindo(a) de volta!</string>
    <string name="hint_loginemail">Email</string>
    <string name="hint_loginsenha">Senha</string>
    <string name="text_esqueceu_senha">Esqueceu a senha?</string>
    <string name="btn_login">Login</string>
    <string name="password_empty_login">Preencha sua senha para efetuar o login!</string>
    <string name="email_empty_login">Preencha seu email para efetuar o login!</string>
    <string name="title_adicionar_avaliacao">Adicionar Avaliação</string>
    <string name="title_como_foi_sua_experiencia">Como foi sua experiência?</string>
    <string name="sub_title_como_foi_sua_experiencia">Avalie de 1 a 5 estrelas para classificar</string>
    <string name="label_descricao_avaliacao">Conte como foi:</string>
    <string name="label_hint_descricao_avaliacao">Escreva sobre sua experiência</string>
    <string name="btn_avaliar">Avaliar</string>
    <string name="aviso_preencha_descricao_avaliacao">Por favor, adicione uma descrição da sua experiência.</string>
    <string name="error_avaliacao_id_nao_encontrado">Erro: ID da avaliação não encontrado.</string>
    <string name="sucesso_avaliacao_feita">Avaliação adicionada com sucesso!</string>
    <string name="erro_ao_enviar_avaliacao">Erro ao enviar avaliação: %1$s</string>
    <string name="error_atualizar_avaliacao">Falha ao atualizar a avaliação: %1$s</string>
    <string name="title_avaliacao">Avaliações</string>
    <string name="title_finalidade">Finalidade</string>
    <string name="option_finalidade_doar">Doar</string>
    <string name="option_finalidade_vender">Vender</string>
    <string name="option_finalidade_organizar">Organizar</string>
    <string name="btn_cadastrar_peca">Cadastrar peça</string>
    <string name="btn_salvar_alteracoes">Salvar alterações</string>
    <string name="hint_preco_peca">Digite o preço</string>
    <string name="hint_nome_peca">Digite o título/nome para a peça</string>
    <string name="hint_detalhes_peca">Digite os detalhes da peça</string>
    <string name="error_usuario_nao_logado">Erro: Usuário não logado.</string>
    <string name="aviso_gaveta_doacao_nao_encontrada">Aviso: Gaveta \'Doação\' não encontrada para este usuário.</string>
    <string name="aviso_gaveta_vendas_nao_encontrada">Aviso: Gaveta \'Vendas\' não encontrada para este usuário.</string>
    <string name="status_edit_peca2">Editar Peça (2/2)</string>
    <string name="status_visualizar_peca2">Visualizar Peça (2/2)</string>
    <string name="status_cadastrar_peca2">Cadastrar Peça (2/2)</string>
    <string name="error_detalhes_peca_nao_encontrados">Detalhes da peça não encontrados.</string>
    <string name="error_ao_carregar_detalhes_peca">Erro ao carregar detalhes da peça: %1$s</string>
    <string name="error_buscar_tipo_de_conta">Erro ao buscar tipo de conta: %1$s</string>
    <string name="error_nenhuma_gaveta_encontrada_ou_tipo_conta_nao_identificado">Nenhuma gaveta encontrada ou tipo de conta não identificado.</string>
    <string name="error_buscar_subtipo">Erro ao buscar subtipo: %1$s</string>
    <string name="error_sem_gavetas_customizadas_organizacao">Você não possui gavetas customizadas de organização.</string>
    <string name="error_listar_uids_gavetas">Erro ao listar UIDs das gavetas: %1$s</string>
    <string name="erro_carregar_detalhes_das_gavetas">Erro ao carregar detalhes das gavetas: %1$s</string>
    <string name="error_ao_buscar_uid_da_gaveta">Erro ao buscar UID da gaveta \'%1$s\': %2$s</string>
    <string name="showbottonsheet_btn_excluir">Excluir</string>
    <string name="showbottonsheet_msg_excluir">Clique no botão se você realmente deseja excluir</string>
    <string name="showbottonsheet_title_excluir_gaveta">Deseja excluir esta gaveta?</string>
    <string name="btn_editar">Editar</string>
    <string name="title_preco_peca">R$00,00</string>
    <string name="title_nome_peca">-----</string>
    <string name="title_descricao_peca">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</string>
    <string name="btn_comprar">Comprar</string>
    <string name="btn_adicionar_ao_carrinho">Adicionar ao carrinho</string>
    <string name="btn_ver_avaliacoes_vendedor">Ver avaliações do vendedor</string>
    <string name="title_editar_anuncio">Editar Anúncio</string>
    <string name="label_breve_descricao">Breve Descrição</string>
    <string name="label_hint_breve_descricao">Descreva sua instituição em poucas palavras...</string>
    <string name="label_detalhes">Detalhes (O que você faz)</string>
    <string name="label_hint_detalhes">Fale mais sobre o propósito e funcionamento da sua instituição.</string>
    <string name="label_endereco">Endereço</string>
    <string name="label_hint_endereco">Endereço Completo</string>
    <string name="label_hint_carregandocnpj">Carregando CNPJ...</string>
    <string name="btn_salvar_anuncio">Salvar Anúncio</string>
</resources>