<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.cadastro.CadastroEnderecoFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        android:paddingTop="40dp"
        android:paddingStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/playfair_display_semibold"
        android:text="@string/title_cadastro_endereco"
        android:textColor="#134313"
        android:textSize="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_cep"
        android:textSize="16dp"
        android:textColor="#757575"/>

    <EditText
        android:id="@+id/edit_text_cep"
        android:layout_gravity="center"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/edittextcadastro"
        android:ems="10"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:hint="@string/label_hint_cep"
        android:inputType="number"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/VerdeEscuro"
        android:textColorHint="@color/VerdeEscuro"
        android:textSize="16dp"
        android:maxLength="9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_rua"
        android:textSize="16dp"
        android:textColor="#757575"/>

    <EditText
        android:id="@+id/edit_text_rua"
        android:layout_gravity="center"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/edittextcadastro"
        android:ems="10"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:hint="@string/label_hint_rua"
        android:inputType="textCapWords"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/VerdeEscuro"
        android:textColorHint="@color/VerdeEscuro"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_numero"
        android:textSize="16dp"
        android:textColor="#757575"/>

    <EditText
        android:id="@+id/edit_text_nmrrua"
        android:layout_gravity="center"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/edittextcadastro"
        android:ems="10"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:hint="@string/label_hint_numero"
        android:inputType="number"
        android:maxLength="5"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/VerdeEscuro"
        android:textColorHint="@color/VerdeEscuro"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_complemento"
        android:textSize="16dp"
        android:textColor="#757575"/>

    <EditText
        android:id="@+id/edit_text_complemento"
        android:layout_gravity="center"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/edittextcadastro"
        android:ems="10"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:hint="@string/label_hint_complemento"
        android:inputType="textCapSentences"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/VerdeEscuro"
        android:textColorHint="@color/VerdeEscuro"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_bairro"
        android:textSize="16dp"
        android:textColor="#757575"/>

    <EditText
        android:id="@+id/edit_text_bairro"
        android:layout_gravity="center"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/edittextcadastro"
        android:ems="10"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:hint="@string/label_hint_bairro"
        android:inputType="textCapWords"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/VerdeEscuro"
        android:textColorHint="@color/VerdeEscuro"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_cidade"
        android:textSize="16dp"
        android:textColor="#757575"/>

    <EditText
        android:id="@+id/edit_text_cidade"
        android:layout_gravity="center"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/edittextcadastro"
        android:ems="10"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:hint="@string/label_hint_cidade"
        android:inputType="textCapWords"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/VerdeEscuro"
        android:textColorHint="@color/VerdeEscuro"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_estado"
        android:textSize="16dp"
        android:textColor="#757575"/>

    <EditText
        android:id="@+id/edit_text_estado"
        android:layout_gravity="center"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/edittextcadastro"
        android:ems="10"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:hint="@string/label_hint_estado"
        android:inputType="textCapWords"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/VerdeEscuro"
        android:textColorHint="@color/VerdeEscuro"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_pais"
        android:textSize="16dp"
        android:textColor="#757575"/>

    <EditText
        android:id="@+id/edit_text_pais"
        android:layout_gravity="center"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/edittextcadastro"
        android:ems="10"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:hint="@string/label_hint_pais"
        android:inputType="textCapWords"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/VerdeEscuro"
        android:textColorHint="@color/VerdeEscuro"
        android:textSize="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bttProximo"
        android:layout_gravity="center"
        android:layout_width="328dp"
        android:layout_height="42dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/estilobtt1"
        android:textColor="@color/VerdeEscuro"
        android:textAllCaps="false"
        android:text="@string/btn_proximo"
        android:textSize="20dp"
        android:fontFamily="@font/nunito_sans_semibold"/>
</LinearLayout>