<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.compra.ComprarPecaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingTop="40dp"
            app:navigationIcon="@drawable/baseline_arrow_back_24" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:paddingHorizontal="15dp"
        android:paddingTop="15dp"
        tools:src="@drawable/camisa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="312dp"
        android:text="@string/title_preco_peca"
        android:textSize="30dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="356dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/title_nome_peca"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:layout_marginTop="396dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:paddingEnd="20dp"
        android:text="@string/title_descricao_peca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnComprar"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/estilobtt1"
        android:text="@string/btn_comprar"
        android:textAllCaps="false"
        android:textColor="@color/VerdeEscuro"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdicionarCarrinho"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/estilobtt1"
        android:text="@string/btn_adicionar_ao_carrinho"
        android:textAllCaps="false"
        android:textColor="@color/VerdeEscuro"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnComprar" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVerMais"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/estilobtt1"
        android:gravity="center"
        android:text="@string/btn_ver_avaliacoes_vendedor"
        android:textColor="@color/VerdeEscuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>